add java examples
